edited dao and used in memory db